--- a/Pages/Department/Index.cshtml
+++ b/Pages/Department/Index.cshtml
@@ -5,11 +5,16 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>DepartmentsInfo</h1>
+
+<h1 class="text-primary">DepartmentsInfo</h1>
+<section>
+<div class="container bg-light p-3">
+
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class=" btn btn-primary btn-lg">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -40,3 +45,6 @@
 }
     </tbody>
 </table>
+</div>
+
+</section>
