--- a/Pages/Person/Index.cshtml
+++ b/Pages/Person/Index.cshtml
@@ -5,10 +5,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>PersonInfo</h1>
+<h1 class="text-primary ">PersonInfo</h1>
 
+
+<section>
+
+<div class="container bg-light p-3">
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-lg btn-primary">Create New</a>
 </p>
 <form>
     <p>
@@ -19,6 +23,9 @@
         <input type="submit" value="Filter" />
     </p>
 </form>
+
+    
+
 <table class="table">
     <thead>
         <tr>
@@ -67,3 +74,6 @@
 }
     </tbody>
 </table>
+
+</div>
+</section>
