--- a/Pages/Ui/Index.cshtml
+++ b/Pages/Ui/Index.cshtml
@@ -5,23 +5,30 @@ ViewData["Title"] = "UI Selecter Page";
 }
 
 
-<div class="d-lg-flex container m-5  text-center">
+<section>
+<div class="container bg-secondary">
+
+<div class="d-lg-flex  m-5  text-center">
 
     <div class=" me-5 w-75">
     <a class="text-light mt-5   p-5  btn btn-primary "  asp-page="/Ui/SuperAdminInfo">SuperAdminInfoUi</a>
-        <p class="display-6">超级管理员</p>
+        <p class="display-6 text-warning">超级管理员</p>
     </div>
 
     <div class="me-5 w-75">
     <a class="text-light mt-5  p-5 btn btn-primary " asp-page="/Ui/AdminInfo">AdminInfoUi</a>
-        <p class="display-6">部门管理员</p>
+        <p class="display-6 text-warning">部门管理员</p>
     </div>
 
     <div class="me-5 w-75">
     <a class="text-light mt-5 p-5 btn btn-primary "  asp-page="/Ui/PersonInfo">PersonInfo</a>
-        <p class="display-6">员工</p>
+        <p class="display-6 text-warning">员工</p>
     </div>
 
-
+    </div>
 </div>
+    <div class="bg-light container">
+        <p>Become a Front enginnineer</p>
 
+    </div>
+</section>
