--- a/Pages/Account/Index.cshtml
+++ b/Pages/Account/Index.cshtml
@@ -5,13 +5,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>AccountInfo</h1>
-<h2>@Model.Infomation</h2>
-<br />
-<a href="/Account/Logout">Logout</a>
+<h1></h1>
+<h1 class="text-primary">AccountInfo</h1>
+<h4 class="text-warning">@Model.Infomation</h4>
+<a class="text-danger btn btn-warning" href="/Account/Logout">Logout</a>
+<section>
+<div class="container bg-light p-3">
+
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-lg btn-primary">Create New</a>
 </p>
+    
+<br />
+
 <table class="table">
     <thead>
         <tr>
@@ -48,3 +54,8 @@
 }
     </tbody>
 </table>
+
+
+</div>
+
+</section>
