--- a/Pages/Account/Register.cshtml
+++ b/Pages/Account/Register.cshtml
@@ -6,7 +6,7 @@
 <section>
     <div class="container">
 
-    <h1 class="display-1">Register</h1>
+    <h1 class="display-1 text-primary">Register</h1>
 
     <div class="text-danger">
 
