--- a/Pages/RewardingAndPunishment/Index.cshtml
+++ b/Pages/RewardingAndPunishment/Index.cshtml
@@ -4,12 +4,16 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>RewardingAndPunishment</h1>
+<h1 class="text-primary">RewardingAndPunishment</h1>
+<section>
+<div class="container bg-light p-3">
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-lg btn-primary">Create New</a>
 </p>
+    
+
+
 <table class="table">
     <thead>
         <tr>
@@ -52,3 +56,7 @@
 }
     </tbody>
 </table>
+
+</div>
+
+</section>
