--- a/Pages/Training/Index.cshtml
+++ b/Pages/Training/Index.cshtml
@@ -4,12 +4,14 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>TrainingInfo</h1>
+<h1 class="text-primary">TrainingInfo</h1>
+<section>
+<div class="container bg-light p-3">
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" class="btn btn-lg btn-primary">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -40,3 +42,8 @@
 }
     </tbody>
 </table>
+
+
+</div>
+
+</section>
