--- a/Pages/Ui/Index.cshtml
+++ b/Pages/Ui/Index.cshtml
@@ -27,8 +27,19 @@ ViewData["Title"] = "UI Selecter Page";
 
     </div>
 </div>
-    <div class="bg-light container">
-        <p>Become a Front enginnineer</p>
 
+</section>
+
+<section class="bg-primary p-5 text-light">
+    <div class="container">
+
+        <div class="d-lg-flex justify-content-between align-item-center">
+            <h3 class="">Become a Front enginnineer</h3>
+            <div class="input-group">
+                <input type="text" class="form-control ">
+                <button class="btn btn-dark btn-lg ">确定</button>
+            </div>
+
+        </div>
     </div>
 </section>
