--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="~/HRsystem.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
+    <header class=" sticky-top">
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+        <nav class="  navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container-fluid ps-5 pe-5">
                 <a class="navbar-brand text-primary" asp-area="" asp-page="/Index">HRsystem</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
