修改personinfo 准备解决当没有注册信息时的提示问题

--- a/Pages/Ui/PersonInfo.cshtml
+++ b/Pages/Ui/PersonInfo.cshtml
@@ -99,7 +99,7 @@
 </section>
 
 
-<section class="p-1 ">
+<section class="p-5">
 <div class=" container-fluid ">
     <h4 class="display-6 text-primary">RewardingAndPunishmentInfo</h4>
     <table class="table">
@@ -146,8 +146,8 @@
 </div>
     </section>
 
-<section class="bg-light">
-<div class="border container">
+<section class="bg-light p-5">
+<div class=" container">
     <h4 class="display-6 text-primary">TrainingInfo</h4>
     <table class="table">
         <thead>
