--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,22 @@
 @{
     ViewData["Title"] = "Home page";
 }
+
+
+
+    @if (TempData["Error"] != null)
+{
+<section class="bg-warning text-danger display-1 ">
+    <div class="">
+        <div class="m-5">
+            @TempData["Error"]
+        </div>
+    </div>
+</section>
+}
+else{
+
+
 <section class="bg-light p-3">
 
 
@@ -83,3 +99,4 @@
 <div class="border p-5 my-5"><h1>H</h1></div>
 
     -->
+}
