--- a/Pages/Person/Create.cshtml
+++ b/Pages/Person/Create.cshtml
@@ -6,7 +6,16 @@
 }
 
 <h1>Create</h1>
-
+@if (TempData["Error"] != null)
+{
+    <section class="bg-warning text-danger display-1 ">
+        <div class="">
+            <div class="m-5">
+                @TempData["Error"]
+            </div>
+        </div>
+    </section>
+}
 <h4>PersonBasicInfo</h4>
 <hr />
 <div class="row">
@@ -23,11 +32,13 @@
                 <input asp-for="PersonBasicInfo.Name" class="form-control" />
                 <span asp-validation-for="PersonBasicInfo.Name" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="PersonBasicInfo.DepartmentId" class="control-label"></label>
                 <input asp-for="PersonBasicInfo.DepartmentId" class="form-control" />
                 <span asp-validation-for="PersonBasicInfo.DepartmentId" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="PersonBasicInfo.Sex" class="control-label"></label>
                 <input asp-for="PersonBasicInfo.Sex" class="form-control" />
